--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: "18"
 
       - name: 🔨 Build Project
+        working-directory: ./frontend
         run: |
           npm install
           npm run build
