--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: master
+    branches: [master]
 
 name: 🚀 Deploy website on push
 jobs:
@@ -28,3 +28,5 @@ jobs:
           server: ${{secrets.ftp_server}}
           username: ${{secrets.ftp_username}}
           password: ${{secrets.ftp_password}}
+          dangerous-clean-slate: true
+          local-dir: ./frontend/build/
